--- a/CoCoworkView/MainWindow.xaml
+++ b/CoCoworkView/MainWindow.xaml
@@ -84,28 +84,29 @@
                     <RowDefinition/>
                     <RowDefinition/>
                 </Grid.RowDefinitions>
-                <Label Content="Показать свободные" Grid.Column="1" Grid.Row="0"/>
-                <Label Content="с" Grid.Column="0" Grid.Row="0" Margin="12 25 0 0"/>
-                <DatePicker Grid.Column="1" Grid.Row="0" Margin="0 25 0 20"/>
-                <Label Content="по" Grid.Column="0" Grid.Row="0" Margin="5 50 0 0" Grid.RowSpan="2"/>
-                <DatePicker Grid.Column="1" Grid.Row="0" Margin="0 50 0 65" Grid.RowSpan="2"/>
+                <Button Content="показать свободные"  Grid.Column="1" Grid.Row="0" Margin="0, 15, 0, 15"/>
+                <Label Content="с" Grid.Column="0" Grid.Row="1" Margin="12 0 0 0"/>
+                <DatePicker Grid.Column="1" Grid.Row="1" Margin="0 0 0 20"/>
+                <Label Content="по" Grid.Column="0" Grid.Row="1" Margin="5 35 0 0" Grid.RowSpan="2"/>
+                <DatePicker Grid.Column="1" Grid.Row="1" Margin="0 37 0 70" Grid.RowSpan="2"/>
 
-                <Button x:Name="AddNewButton" Content="Инсертнуть" Grid.Column="1" Grid.Row="1" Margin="0, 30, 0, 0"/>
+                <Button x:Name="AddNewButton" Content="Инсертнуть" Grid.Column="1" Grid.Row="2" Margin="0, 30, 0, 0"/>
 
-                <StackPanel x:Name="CheckStackPanel" Grid.Row="2" Grid.Column="1" Grid.RowSpan="2" Margin="0, 20, 0, 10">
+                <!--<StackPanel x:Name="CheckStackPanel" Grid.Row="2" Grid.Column="1" Grid.RowSpan="2" Margin="0, 20, 0, 10">
                     <CheckBox Content="Место" Margin="0, 5, 0, 0"/>
                     <CheckBox Content="Миниофис" Margin="0, 5, 0, 0"/>
                     <CheckBox Content="Конференц-зал" Margin="0, 5, 0, 0"/>
                     <CheckBox Content="Переговорная" Margin="0, 5, 0, 0"/>
                     <CheckBox Content="ПК" Margin="0, 5, 0, 0"/>
-                </StackPanel>
+                </StackPanel>-->
                 <Button x:Name="EditButton" Content="Редактировать" Grid.Column="1" Grid.Row="4" Margin="0, 15, 0, 15"/>
                 <Button x:Name="AddToOrderButton" Content="Добавить к заказу" Grid.Column="1" Grid.Row="5" Margin="0, 15, 0, 15"/>
-                <Button x:Name="DeleteButton" Content="Удалить" Grid.Column="1" Grid.Row="6" Margin="0, 15, 0, 15"/>
+                <Button x:Name="DeleteButton" Content="Удалить" Grid.Column="1" Grid.Row="6"
+                        Margin="0, 15, 0, 15" Command="{Binding Path=Booking.DeleteMiniOffice}"/>
             </Grid>
             
-            <DataGrid AutoGenerateColumns="False" Margin="2 0 2 0" Grid.Column="0" Grid.Row="1"
-                      CanUserAddRows="False" ItemsSource="{Binding MiniOffices}" SelectedItem="{Binding SelectedItem}">
+            <DataGrid AutoGenerateColumns="False" Margin="2 0 2 0" Grid.Column="0" Grid.Row="1" CanUserAddRows="False" 
+                      ItemsSource="{Binding Booking.MiniOffices}" SelectedItem="{Binding Booking.MiniOfficeSelectedItem}">
                 <DataGrid.Resources>
                     <Style TargetType="{x:Type DataGridColumnHeader}">
                         <Setter Property="HorizontalContentAlignment" Value="Center"/>
@@ -115,12 +116,14 @@
                     </Style>
                 </DataGrid.Resources>
                 <DataGrid.Columns>
-                    <DataGridTextColumn Header="Цена за день"  Width="80" Binding="{Binding PricePerDay}"/>
-                    <DataGridTextColumn Header="Кол-во мест"  Width="110*" Binding="{Binding AmountOfPlaces}"/>
+                    <DataGridTextColumn Header="Описание"  Width="auto" Binding="{Binding Name}"/>
+                    <DataGridTextColumn Header="Цена за день"  Width="auto" Binding="{Binding PricePerDay}"/>
+                    <DataGridTextColumn Header="Кол-во мест"  Width="auto" Binding="{Binding AmountOfPlaces}"/>
                 </DataGrid.Columns>
             </DataGrid>
             
-            <DataGrid AutoGenerateColumns="False" Grid.Column="1" Margin="2 0 2 0" Grid.Row="1" Grid.RowSpan="5" CanUserAddRows="False" ItemsSource="{Binding Places}">
+            <DataGrid AutoGenerateColumns="False" Grid.Column="1" Margin="2 0 2 0" Grid.Row="1"
+                      Grid.RowSpan="5" CanUserAddRows="False" ItemsSource="{Binding Booking.Places}">
                 <DataGrid.Resources>
                     <Style TargetType="{x:Type DataGridColumnHeader}">
                         <Setter Property="HorizontalContentAlignment" Value="Center"/>
@@ -130,12 +133,13 @@
                     </Style>
                 </DataGrid.Resources>
                 <DataGrid.Columns>
-                    <DataGridTextColumn Header="Цена/день"  Width="70" Binding="{Binding PricePerDay}"/>
-                    <DataGridTextColumn Header="Фикс цена/день"  Width="*" Binding="{Binding FixedPricePerDay}"/>
+                    <DataGridTextColumn Header="Цена/день"  Width="auto" Binding="{Binding PricePerDay}"/>
+                    <DataGridTextColumn Header="Фикс цена/день"  Width="auto" Binding="{Binding PriceFixedPerDay}"/>
                 </DataGrid.Columns>
             </DataGrid>
             
-            <DataGrid AutoGenerateColumns="False" Grid.Column="0" Grid.Row="5" CanUserAddRows="False" ItemsSource="{Binding MeetingRooms}">
+            <DataGrid AutoGenerateColumns="False" Grid.Column="0" Grid.Row="5" 
+                      CanUserAddRows="False" ItemsSource="{Binding Booking.MeetingRooms}">
                 <DataGrid.Resources>
                     <Style TargetType="{x:Type DataGridColumnHeader}">
                         <Setter Property="HorizontalContentAlignment" Value="Center"/>
@@ -145,13 +149,14 @@
                     </Style>
                 </DataGrid.Resources>
                 <DataGrid.Columns>
-                    <DataGridTextColumn Header="№"  Width="30" Binding="{Binding Number}"/>
-                    <DataGridTextColumn Header="Цена за час"  Width="75" Binding="{Binding PricePerHour}"/>
-                    <DataGridTextColumn Header="Кол-во мест"  Width="80*" Binding="{Binding AmountOfPlaces}"/>
+                    <DataGridTextColumn Header="№"  Width="auto" Binding="{Binding Number}"/>
+                    <DataGridTextColumn Header="Цена за час"  Width="auto" Binding="{Binding PricePerHour}"/>
+                    <DataGridTextColumn Header="Кол-во мест"  Width="auto" Binding="{Binding AmountOfPlaces}"/>
                 </DataGrid.Columns>
             </DataGrid>
 
-            <DataGrid AutoGenerateColumns="False" Margin="2 0 2 0" Grid.Column="0" Grid.Row="3" CanUserAddRows="False" ItemsSource="{Binding ConferenceRooms}">
+            <DataGrid AutoGenerateColumns="False" Margin="2 0 2 0" Grid.Column="0" Grid.Row="3" CanUserAddRows="False"
+                      ItemsSource="{Binding Booking.ConferenceRooms}">
                 <DataGrid.Resources>
                     <Style TargetType="{x:Type DataGridColumnHeader}">
                         <Setter Property="HorizontalContentAlignment" Value="Center"/>
@@ -161,12 +166,13 @@
                     </Style>
                 </DataGrid.Resources>
                 <DataGrid.Columns>
-                    <DataGridTextColumn Header="Цена за час"  Width="78" Binding="{Binding PricePerHour}"/>
-                    <DataGridTextColumn Header="Кол-во мест"  Width="110*" Binding="{Binding AmountOfPlaces}"/>
+                    <DataGridTextColumn Header="Цена за час"  Width="auto" Binding="{Binding PricePerHour}"/>
+                    <DataGridTextColumn Header="Кол-во мест"  Width="auto" Binding="{Binding AmountOfPlaces}"/>
                 </DataGrid.Columns>
             </DataGrid>
 
-            <DataGrid AutoGenerateColumns="False" Margin="0 0 0 0" HorizontalAlignment="Left" Width="220" Grid.Column="2" Grid.RowSpan="5" Grid.Row="1" CanUserAddRows="False" ItemsSource="{Binding Computers}">
+            <DataGrid AutoGenerateColumns="False" Margin="0 0 0 0" Width="auto" Grid.Column="2"
+                      Grid.RowSpan="5" Grid.Row="1" CanUserAddRows="False" ItemsSource="{Binding Booking.Computers}">
                 <DataGrid.Resources>
                     <Style TargetType="{x:Type DataGridColumnHeader}">
                         <Setter Property="HorizontalContentAlignment" Value="Center"/>
@@ -176,8 +182,8 @@
                     </Style>
                 </DataGrid.Resources>
                 <DataGrid.Columns>
-                    <DataGridTextColumn Header="Цена/месяц"  Width="78" Binding="{Binding PricePerMonth}"/>
-                    <DataGridTextColumn Header="Описание"  Width="110*" Binding="{Binding Description}"/>
+                    <DataGridTextColumn Header="Цена/месяц"  Width="auto" Binding="{Binding PricePerMonth}"/>
+                    <DataGridTextColumn Header="Описание"  Width="auto" Binding="{Binding Description}"/>
                 </DataGrid.Columns>
             </DataGrid>
         </Grid>
