--- a/CoCoworkView/MainWindow.xaml
+++ b/CoCoworkView/MainWindow.xaml
@@ -85,8 +85,42 @@
             <Label>Text in client grid</Label>
         </Grid>
 
-        <Grid x:Name="OrderHistoryGrid" Grid.Column ="1" Visibility="{Binding Order.GridVisibility}">
-            <Label>Text in order history grid</Label>
+        <Grid x:Name="OrderGrid" Grid.Column ="1" Visibility="{Binding Order.GridVisibility}">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="75*"/>
+                <ColumnDefinition Width="25*"/>
+            </Grid.ColumnDefinitions>
+
+            <Grid x:Name="RightOrderGrid" Grid.Column ="2" Background="#FFE0DFDF" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="15*"/>
+                    <ColumnDefinition Width="70*"/>
+                    <ColumnDefinition Width="15*"/>
+                </Grid.ColumnDefinitions>
+
+                <Grid.RowDefinitions>
+                    <RowDefinition/>
+                    <RowDefinition/>
+                    <RowDefinition/>
+                    <RowDefinition/>
+                    <RowDefinition/>
+                    <RowDefinition/>
+                    <RowDefinition/>
+                    <RowDefinition/>
+                </Grid.RowDefinitions>
+
+                <Button x:Name="AddPaymentButton" Content="Добавить оплату" Grid.Column="1" Grid.Row="1" Margin="0, 30, 0, 0"/>
+                <Label Name="ShowLabel" Content="Показать:" Grid.Column="1" Grid.Row="2" Margin="0, 15, 0, 15" VerticalAlignment="Bottom"/>
+                <StackPanel x:Name="CharacteristicsOfOrdersStackPanel" Grid.Row="3" Grid.Column="1" Grid.RowSpan="2" Margin="0, 10, 0, 10">
+                    <CheckBox Content="Оплаченные" Margin="0, 5, 0, 0"/>
+                    <CheckBox Content="Неоплаченные" Margin="0, 5, 0, 0"/>
+                    <CheckBox Content="Текущие" Margin="0, 5, 0, 0"/>
+                    <CheckBox Content="Удалённые" Margin="0, 5, 0, 0"/>
+                </StackPanel>
+                <Button x:Name="DeleteOrderButton" Content="Удалить" Grid.Column="1" Grid.Row="6" Margin="0, 0, 0, 30"/>
+            </Grid>
+
+            <DataGrid x:Name="OrdersDataGrid" DataContext="{Binding Order.Orders}" Grid.Column="0"/>
         </Grid>
 
         <Grid x:Name="CurrentOrderGrid" Grid.Column ="1" Visibility="{Binding CurrentOrder.GridVisibility}">
