--- a/CoCoworkView/MainWindow.xaml
+++ b/CoCoworkView/MainWindow.xaml
@@ -85,7 +85,7 @@
             <Label>Text in client grid</Label>
         </Grid>
 
-        <Grid x:Name="OrderGrid" Grid.Column ="1" Visibility="{Binding Order.GridVisibility}">
+        <Grid x:Name="OrderGrid" Grid.Column ="1" Visibility="{Binding GridVisibility}" DataContext="{Binding Order}">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="75*"/>
                 <ColumnDefinition Width="25*"/>
@@ -109,23 +109,23 @@
                     <RowDefinition/>
                 </Grid.RowDefinitions>
 
-                <Button x:Name="AddPaymentButton" Content="Добавить оплату" Grid.Column="1" Grid.Row="1" Margin="0, 30, 0, 0"/>
+                <Button x:Name="AddPaymentButton" Command="{Binding ChangePaymentVisibility}" CommandParameter="{Binding Payment}" Content="Добавить оплату" Grid.Column="1" Grid.Row="1" Margin="0, 30, 0, 0"/>
                 <Label Name="ShowLabel" Content="Показать:" Grid.Column="1" Grid.Row="2" Margin="0, 15, 0, 15" VerticalAlignment="Bottom"/>
                 <StackPanel x:Name="CharacteristicsOfOrdersStackPanel" Grid.Row="3" Grid.Column="1" Grid.RowSpan="2" Margin="0, 10, 0, 10">
-                    <CheckBox Content="Оплаченные" Margin="0, 5, 0, 0" IsChecked="{Binding Order.ShowPaid}"/>
-                    <CheckBox Content="Неоплаченные" Margin="0, 5, 0, 0" IsChecked="{Binding Order.ShowUnpaid}"/>
-                    <CheckBox Content="Текущие" Margin="0, 5, 0, 0" IsChecked="{Binding Order.ShowActive}" IsEnabled="{Binding Order.ShowActiveAvailability}" />
-                    <CheckBox Content="Отменённые" Margin="0, 5, 0, 0" IsChecked="{Binding Order.ShowCanceled}" IsEnabled="{Binding Order.ShowCanceledAvailability}"/>
+                    <CheckBox Content="Оплаченные" Margin="0, 5, 0, 0" IsChecked="{Binding ShowPaid}"/>
+                    <CheckBox Content="Неоплаченные" Margin="0, 5, 0, 0" IsChecked="{Binding ShowUnpaid}"/>
+                    <CheckBox Content="Текущие" Margin="0, 5, 0, 0" IsChecked="{Binding ShowActive}" IsEnabled="{Binding ShowActiveAvailability}" />
+                    <CheckBox Content="Отменённые" Margin="0, 5, 0, 0" IsChecked="{Binding ShowCanceled}" IsEnabled="{Binding ShowCanceledAvailability}"/>
                 </StackPanel>
-                <Button x:Name="CancelOrderButton" Content="Отменить заказ" Grid.Column="1" Grid.Row="6" Margin="0, 0, 0, 30" IsEnabled="{Binding Order.IsCancelButtonAvailable}"/>
+                <Button x:Name="CancelOrderButton" Content="Отменить заказ" Grid.Column="1" Grid.Row="6" Margin="0, 0, 0, 30" IsEnabled="{Binding IsCancelButtonAvailable}"/>
             </Grid>
             <Grid x:Name="MainOrderGrid" Grid.Column ="0" Background="#FFE0DFDF" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="70*"/>
-                    <ColumnDefinition Width="30*"/>
+                    <ColumnDefinition Width="auto"/>
                 </Grid.ColumnDefinitions>
-                <DataGrid x:Name="OrdersDataGrid" ItemsSource="{Binding Order.Orders}" SelectedItem="{Binding Order.SelectedItem}" CanUserAddRows="False" CanUserDeleteRows="False" CanUserReorderColumns="False" CanUserSortColumns="True"  Grid.Column="0" ColumnWidth="*"/>
-                <Grid x:Name="AddPaymentGrid" Grid.Column ="2" Background="#FFE0DFDF" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+                <DataGrid x:Name="OrdersDataGrid" ItemsSource="{Binding Orders}" SelectedItem="{Binding SelectedItem}" CanUserAddRows="False" CanUserDeleteRows="False" CanUserReorderColumns="False" CanUserSortColumns="True"  Grid.Column="0" ColumnWidth="*"/>
+                <Grid x:Name="AddPaymentGrid" Visibility="{Binding Payment.GridVisibility}" Grid.Column ="2" Background="#FFE0DFDF" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
                     <Grid.RowDefinitions>
                         <RowDefinition/>
                         <RowDefinition/>
@@ -136,9 +136,8 @@
                         <RowDefinition/>
                         <RowDefinition/>
                     </Grid.RowDefinitions>
-                    
-                    
 
+                    <Button x:Name="AddFinallyPaymentButton" Command="{Binding ChangePaymentVisibility}" CommandParameter="{Binding Payment}" Content="Добавить оплату" Grid.Column="1" Grid.Row="6" Margin="15, 0, 15, 30"/>
                 </Grid>
             </Grid>
         </Grid>
