Start create command for UI

--- a/CoCoworkView/MainWindow.xaml
+++ b/CoCoworkView/MainWindow.xaml
@@ -91,6 +91,22 @@
         </Grid>
 
         <Grid x:Name="CurrentOrderGrid" Visibility="Visible" Grid.Column ="1">
+
+            <DataGrid x:Name="CurrentOrderDataGrid" AutoGenerateColumns="False" Grid.Column="0" CanUserAddRows="False" ItemsSource="{Binding CurrentOrder}" Margin="0,0,200,0"  >
+                <DataGrid.Resources>
+                    <Style TargetType="{x:Type DataGridColumnHeader}">
+                        <Setter Property="Background" Value="PaleTurquoise"/>
+                        <Setter Property="BorderThickness" Value="0.1, 0.1, 1, 2"/>
+                        <Setter Property="HorizontalContentAlignment" Value="Center"/>
+                        <Setter Property="BorderBrush" Value="Black"/>
+                    </Style>
+                </DataGrid.Resources>
+                <DataGrid.Columns>
+                    <DataGridTextColumn Binding="{Binding Name}" Header=" Имя" Width="150"/>
+                    <DataGridTextColumn Binding="{Binding Type}" Header=" Тип" Width="150"/>
+                    <DataGridTextColumn Binding="{Binding Price}" Header=" Цена" Width="150"/>
+                </DataGrid.Columns>
+            </DataGrid>
             <Grid x:Name="RightOrderGrid" Grid.Column ="2" Background="#FFE0DFDF" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Width="200" Margin="0,0,-600,0">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="15*"/>
@@ -110,21 +126,23 @@
                 </Grid.RowDefinitions>
 
 
-                <ListView x:Name="CurrentOrderListview" ItemsSource="{Binding CurrentOrder}" Width="600" Margin="-600,0,30,0" Grid.RowSpan="8">
-                <ListView.ItemTemplate> 
-                    <DataTemplate>
-                        <StackPanel Orientation="Horizontal">
-                            <TextBlock Text="{Binding Name}"></TextBlock>
-                            <TextBlock Text=" "></TextBlock>
-                            <TextBlock Text="{Binding Type}"></TextBlock>
-                            <TextBlock Text=" "></TextBlock>
-                            <TextBlock Text="{Binding Price}"></TextBlock>
-                        </StackPanel>
-                    </DataTemplate>
-                </ListView.ItemTemplate>
-                </ListView>
+                <!--<ListView x:Name="CurrentOrderListview" ItemsSource="{Binding CurrentOrder}" Margin="-600,62,31,0" Grid.RowSpan="6" Grid.Row="2">
+                    <ListView.ItemTemplate>
+                        <DataTemplate>
+                            <StackPanel Orientation="Horizontal">
+                                <TextBlock Text="{Binding Name}"></TextBlock>
+                                <TextBlock Text=" "></TextBlock>
+                                <TextBlock Text="{Binding Type}"></TextBlock>
+                                <TextBlock Text=" "></TextBlock>
+                                <TextBlock Text="{Binding Price}"></TextBlock>
+                            </StackPanel>
+                        </DataTemplate>
+                    </ListView.ItemTemplate>
+                </ListView>-->
                 <Button x:Name="AcceptOrder" Content="Оформить заказ" Grid.Column="1" Grid.Row="5" Margin="0, 15, 0, 15" Height="47"/>
                 <Button x:Name="DeleteOrder" Content="Удалить из заказа" Grid.Column="1" Grid.Row="5" Margin="0,80,0,-60" Height="47"/>
+                <ComboBox HorizontalAlignment="Center" Margin="0,57,0,0" Grid.Row="3" VerticalAlignment="Top" Width="140" Grid.RowSpan="2" Grid.Column="1"/>
+                <Label Grid.Column="1" Content="Выберите клиента:" HorizontalAlignment="Left" Margin="0,8,0,0" Grid.Row="3" VerticalAlignment="Top" FontSize="14"/>
 
             </Grid>
 
