--- a/CoCoworkView/MainWindow.xaml
+++ b/CoCoworkView/MainWindow.xaml
@@ -90,22 +90,14 @@
                 <DatePicker Grid.Column="1" Grid.Row="1" Margin="0 37 0 75" Grid.RowSpan="2"/>
 
                 <Button x:Name="AddNewButton" Content="Инсертнуть" Grid.Column="1" Grid.Row="2" Margin="0, 30, 0, 0"/>
-
-                <!--<StackPanel x:Name="CheckStackPanel" Grid.Row="2" Grid.Column="1" Grid.RowSpan="2" Margin="0, 20, 0, 10">
-                    <CheckBox Content="Место" Margin="0, 5, 0, 0"/>
-                    <CheckBox Content="Миниофис" Margin="0, 5, 0, 0"/>
-                    <CheckBox Content="Конференц-зал" Margin="0, 5, 0, 0"/>
-                    <CheckBox Content="Переговорная" Margin="0, 5, 0, 0"/>
-                    <CheckBox Content="ПК" Margin="0, 5, 0, 0"/>
-                </StackPanel>-->
                 <Button x:Name="EditButton" Content="Редактировать" Grid.Column="1" Grid.Row="4" Margin="0, 15, 0, 15"/>
                 <Button x:Name="AddToOrderButton" Content="Добавить к заказу" Grid.Column="1" Grid.Row="5" Margin="0, 15, 0, 15"/>
                 <Button x:Name="DeleteButton" Content="Удалить" Grid.Column="1" Grid.Row="6"
-                        Margin="0, 15, 0, 15" Command="{Binding Booking.DeleteMiniOffice}"/>
+                        Margin="0, 15, 0, 15" Command="{Binding Booking.DeleteBookingItem}"/>
             </Grid>
             
             <DataGrid AutoGenerateColumns="False" Margin="2 0 2 0" Grid.Column="0" Grid.Row="1" CanUserAddRows="False" 
-                      ItemsSource="{Binding Booking.MiniOffices}" SelectedItem="{Binding Path=Booking.MiniOfficeSelectedItem, Mode=TwoWay}">
+                      ItemsSource="{Binding Booking.MiniOffices}" SelectedItem="{Binding Path=Booking.BookingSelectedItem, Mode=OneWay}">
                 <DataGrid.Resources>
                     <Style TargetType="{x:Type DataGridColumnHeader}">
                         <Setter Property="HorizontalContentAlignment" Value="Center"/>
@@ -121,8 +113,8 @@
                 </DataGrid.Columns>
             </DataGrid>
             
-            <DataGrid AutoGenerateColumns="False" Grid.Column="1" Margin="2 0 2 0" Grid.Row="1"
-                      CanUserAddRows="False" ItemsSource="{Binding Booking.Places}">
+            <DataGrid AutoGenerateColumns="False" Grid.Column="1" Margin="2 0 2 0" Grid.Row="1" CanUserAddRows="False" 
+                      ItemsSource="{Binding Booking.Places}" SelectedItem="{Binding Path=Booking.BookingSelectedItem, Mode=OneWay}">
                 <DataGrid.Resources>
                     <Style TargetType="{x:Type DataGridColumnHeader}">
                         <Setter Property="HorizontalContentAlignment" Value="Center"/>
@@ -137,8 +129,8 @@
                 </DataGrid.Columns>
             </DataGrid>
             
-            <DataGrid AutoGenerateColumns="False" Grid.Column="2" Grid.Row="1" 
-                      CanUserAddRows="False" ItemsSource="{Binding Booking.MeetingRooms}">
+            <DataGrid AutoGenerateColumns="False" Grid.Column="2" Grid.Row="1" CanUserAddRows="False" 
+                      ItemsSource="{Binding Booking.MeetingRooms}" SelectedItem="{Binding Path=Booking.BookingSelectedItem, Mode=OneWay}">
                 <DataGrid.Resources>
                     <Style TargetType="{x:Type DataGridColumnHeader}">
                         <Setter Property="HorizontalContentAlignment" Value="Center"/>
@@ -155,7 +147,7 @@
             </DataGrid>
 
             <DataGrid AutoGenerateColumns="False" Margin="2 0 2 0" Grid.Column="0" Grid.Row="3" CanUserAddRows="False"
-                      ItemsSource="{Binding Booking.ConferenceRooms}">
+                      ItemsSource="{Binding Booking.ConferenceRooms}" SelectedItem="{Binding Path=Booking.BookingSelectedItem, Mode=OneWay}">
                 <DataGrid.Resources>
                     <Style TargetType="{x:Type DataGridColumnHeader}">
                         <Setter Property="HorizontalContentAlignment" Value="Center"/>
@@ -170,8 +162,8 @@
                 </DataGrid.Columns>
             </DataGrid>
 
-            <DataGrid AutoGenerateColumns="False" Margin="0 0 0 0" Width="auto" Grid.Column="1"
-                      Grid.Row="3" CanUserAddRows="False" Grid.ColumnSpan="2" ItemsSource="{Binding Booking.Computers}">
+            <DataGrid AutoGenerateColumns="False" Margin="0 0 0 0" Width="auto" Grid.Column="1" Grid.Row="3" CanUserAddRows="False"
+                      Grid.ColumnSpan="2" ItemsSource="{Binding Booking.Computers}" SelectedItem="{Binding Path=Booking.BookingSelectedItem, Mode=OneWay}">
                 <DataGrid.Resources>
                     <Style TargetType="{x:Type DataGridColumnHeader}">
                         <Setter Property="HorizontalContentAlignment" Value="Center"/>
