--- a/CoCoworkView/MainWindow.xaml
+++ b/CoCoworkView/MainWindow.xaml
@@ -125,22 +125,10 @@
                 </Grid.RowDefinitions>
 
 
-                <!--<ListView x:Name="CurrentOrderListview" ItemsSource="{Binding CurrentOrder}" Margin="-600,62,31,0" Grid.RowSpan="6" Grid.Row="2">
-                    <ListView.ItemTemplate>
-                        <DataTemplate>
-                            <StackPanel Orientation="Horizontal">
-                                <TextBlock Text="{Binding Name}"></TextBlock>
-                                <TextBlock Text=" "></TextBlock>
-                                <TextBlock Text="{Binding Type}"></TextBlock>
-                                <TextBlock Text=" "></TextBlock>
-                                <TextBlock Text="{Binding Price}"></TextBlock>
-                            </StackPanel>
-                        </DataTemplate>
-                    </ListView.ItemTemplate>
-                </ListView>-->
+                
                 <Button x:Name="AcceptOrder" Content="Оформить заказ" Grid.Column="1" Grid.Row="5" Margin="0, 15, 0, 15" Height="47"/>
                 <Button x:Name="DeleteOrder" Content="Удалить из заказа" Grid.Column="1" Grid.Row="5" Margin="0,80,0,-60" Height="47"/>
-                <ComboBox HorizontalAlignment="Center" Margin="0,57,0,0" Grid.Row="3" VerticalAlignment="Top" Width="140" Grid.RowSpan="2" Grid.Column="1"/>
+                <ComboBox  x:Name="ClientsComboBox" ItemsSource="{Binding CurrentOrder.Clients}" HorizontalAlignment="Center" Margin="0,57,0,0" Grid.Row="3" VerticalAlignment="Top" Width="140" Grid.RowSpan="2" Grid.Column="1"/>
                 <Label Grid.Column="1" Content="Выберите клиента:" HorizontalAlignment="Left" Margin="0,8,0,0" Grid.Row="3" VerticalAlignment="Top" FontSize="14"/>
 
             </Grid>
