--- a/CoCoworkView/MainWindow.xaml
+++ b/CoCoworkView/MainWindow.xaml
@@ -2,9 +2,23 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:viewmodels="clr-namespace:CoCowork.UI.ViewModels" d:DataContext="{d:DesignInstance Type=viewmodels:MainWindowViewModel}"
+        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+        xmlns:viewmodels="clr-namespace:CoCowork.UI.ViewModels" 
+        xmlns:i="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity"
+        d:DataContext="{d:DesignInstance Type=viewmodels:MainWindowViewModel}"
         mc:Ignorable="d"
-        Title="Коворк под контролем" Height="600" Width="1000" Background="#FFB7BBC2">
+        Title="Коворк под контролем" Height="600"  Width="1000" Background="#FFB7BBC2">
+
+    <i:Interaction.Triggers>
+        <i:EventTrigger EventName="Loaded">
+            <!--<i:InvokeCommandAction Command="{Binding Booking.GetMiniOffices}"/>
+            <i:InvokeCommandAction Command="{Binding Booking.GetConferenceRooms}"/>
+            <i:InvokeCommandAction Command="{Binding Booking.GetMeetingRooms}"/>
+            <i:InvokeCommandAction Command="{Binding Booking.GetPlaces}"/>
+            <i:InvokeCommandAction Command="{Binding Booking.GetComputers}"/>-->
+            <i:InvokeCommandAction Command="{Binding Product.GetProductsCommand}"/>
+        </i:EventTrigger>
+    </i:Interaction.Triggers>
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="20*"/>
@@ -77,7 +91,7 @@
             <Label>Text in booking grid</Label>
         </Grid>
 
-        <Grid x:Name="ProductsGrid" Grid.Column ="1" Visibility="{Binding GridVisibility}" DataContext="{Binding Product}">
+        <Grid x:Name="ProductsGrid" Grid.Column ="1" Visibility="{Binding Product.GridVisibility}">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="75*"/>
                 <ColumnDefinition Width="25*"/>
@@ -108,7 +122,7 @@
                 
 
             </Grid>
-            <DataGrid AutoGenerateColumns="False" CanUserAddRows ="False" CanUserDeleteRows="False" Grid.Column="0" Grid.Row="0" ColumnWidth="*">
+            <DataGrid AutoGenerateColumns="False" CanUserAddRows ="False" CanUserDeleteRows="False" Grid.Column="0" Grid.Row="0" ColumnWidth="*" ItemsSource="{Binding Product.Products}" SelectedItem="{Binding Path=Product.SelectedItem, Mode=TwoWay}">
                 <DataGrid.Resources>
                     <Style TargetType="{x:Type DataGridColumnHeader}">
                         <Setter Property="HorizontalContentAlignment" Value="Center"/>
@@ -118,10 +132,10 @@
                     </Style>
                 </DataGrid.Resources>
                 <DataGrid.Columns>
-                    <DataGridTextColumn Header="Наименование" Width ="auto"/>
-                    <DataGridTextColumn Header="Цена за шт" Width ="auto"/>
-                    <DataGridTextColumn Header="Количество" Width ="auto"/>
-                    <DataGridTextColumn Header="Описание" Width ="auto"/>
+                    <DataGridTextColumn Header="Наименование" Width ="auto" Binding="{Binding Name}"/>
+                    <DataGridTextColumn Header="Цена за шт" Width ="auto" Binding="{Binding Price}"/>
+                    <DataGridTextColumn Header="Количество" Width ="auto" Binding="{Binding Amount}"/>
+                    <DataGridTextColumn Header="Описание" Width ="auto" Binding="{Binding Description}"/>
                 </DataGrid.Columns>
             </DataGrid>
         </Grid>
